add browse page, change how pages are redirected

--- a/meteor-chat/client/templates/authenticated/sidebar.html
+++ b/meteor-chat/client/templates/authenticated/sidebar.html
@@ -1,6 +1,6 @@
 <template name="sidebar">
   <aside class="sidebar">
-    <h5>Channels</h5>
+    <!-- <h5>Channels</h5>
     <ul>
       {{#each channel in channels}}
         <li class="{{currentChannel channel.name}}">
@@ -9,7 +9,7 @@
           </a>
         </li>
       {{/each}}
-    </ul>
+    </ul> -->
 
     <h5>Conversations</h5>
     <ul>
