--- a/client/templates/authenticated/channel.html
+++ b/client/templates/authenticated/channel.html
@@ -2,6 +2,7 @@
   {{>header}}
   {{> sidebar}}
 
+  {{#if authenticated}}
   <div class="conversation">
     <div id="messages">
       <div class="messages-list {{#if isLoading}}loading-list{{/if}}">
@@ -21,4 +22,9 @@
       <input name="message" placeholder="Type your message here...">
     </div>
   </div>
+  {{else}}
+    {{#unless redirectPublic}}
+      {{> Template.dynamic template=yield}}
+    {{/unless}}
+  {{/if}}
 </template>
