--- a/client/stylesheets/module/_header.scss
+++ b/client/stylesheets/module/_header.scss
@@ -1,16 +1,17 @@
 .navbar.navbar-default {
-  border-radius: 0px;
-  background: #fff;
+    font-family: 'Lato', sans-serif;
+    border-radius: 0px;
+    background: #fff;
 
-  .navbar-brand > span {
-    position: relative;
-    top: -1px;
-    left: 10px;
-    font-size: 14px;
-    color: #aaa;
-  }
+    .navbar-brand > span {
+        position: relative;
+        top: -1px;
+        left: 10px;
+        font-size: 14px;
+        color: #aaa;
+    }
 }
 
 body.is-channel .navbar.navbar-default {
-  border-bottom: none;
+    border-bottom: none;
 }
