--- a/client/templates/layouts/default.html
+++ b/client/templates/layouts/default.html
@@ -1,5 +1,17 @@
 <template name="default">
-    {{> Template.dynamic template=yield}}
+    {{#if loggingIn}}
+        {{> loading}}
+    {{else}}
+        {{#if authenticated}}
+            {{#unless redirectAuthenticated}}
+                {{> Template.dynamic template=yield}}
+                {{/unless}}
+        {{else}}
+            {{#unless redirectPublic}}
+                {{> Template.dynamic template=yield}}
+            {{/unless}}
+        {{/if}}
+    {{/if}}
     <div>
         &nbsp;
         &nbsp;
