basics for the sidebar done

--- a/client/templates/authenticated/channel.html
+++ b/client/templates/authenticated/channel.html
@@ -1,6 +1,7 @@
 <template name="channel">
   {{>header}}
   {{> sidebar}}
+  {{> assistant}}
 
   {{#if authenticated}}
   <div class="conversation">
