--- a/client/templates/authenticated/sidebar.html
+++ b/client/templates/authenticated/sidebar.html
@@ -1,5 +1,5 @@
 <template name="sidebar">
-  <aside class="sidebar">
+  <aside class="sidebar" id="sideGrad">
     <!-- <h5>Channels</h5>
     <ul>
       {{#each channel in channels}}
