fixed routing issue

--- a/client/templates/public/welcome.html
+++ b/client/templates/public/welcome.html
@@ -38,4 +38,13 @@
             </div> -->
         </div>
     </div>
+    <div>
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+    </div>
+
+    <p style="text-align:center; font-family:'Lato', sans-serif;">Copyright (c) 2017 Ananth Agarwal, Bryan Alcorn, Monica Kumaran, Natalie Leuenberger, Jenny Li</p>
+    <div>&nbsp;</div>
 </template>
