--- a/client/templates/layouts/default.html
+++ b/client/templates/layouts/default.html
@@ -1,24 +1,19 @@
-<template name="default">
-    {{#if loggingIn}}
-        {{> loading}}
-    {{else}}
-        {{#if authenticated}}
-            {{#unless redirectAuthenticated}}
-                {{> Template.dynamic template=yield}}
-                {{/unless}}
+ <template name="default">
+    {{>bertAlert}}
+    {{>header}}
+    <div class="container">
+        {{#if loggingIn}}
+            {{> loading}}
         {{else}}
-            {{#unless redirectPublic}}
-                {{> Template.dynamic template=yield}}
-            {{/unless}}
+            {{#if authenticated}}
+                {{#unless redirectAuthenticated}}
+                    {{> Template.dynamic template=yield}}
+                {{/unless}}
+            {{else}}
+                {{#unless redirectPublic}}
+                    {{> Template.dynamic template=yield}}
+                {{/unless}}
+            {{/if}}
         {{/if}}
-    {{/if}}
-    <div>
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
     </div>
-
-    <p style="text-align:center; font-family:'Lato', sans-serif;">Copyright (c) 2017 Ananth Agarwal, Bryan Alcorn, Monica Kumaran, Natalie Leuenberger, Jenny Li</p>
-    <div>&nbsp;</div>
 </template>
