added location for users in browse

--- a/client/templates/authenticated/browse.html
+++ b/client/templates/authenticated/browse.html
@@ -7,6 +7,9 @@
 	      <a href="/messages/@{{user.username}}">
 	        {{fullName user.profile.name}}
 	      </a>
+	      <ul>
+	      	<li>{{location user.profile.location}}</li>
+	      </ul>
 	    </li>
 	  {{/each}}
 	</ul>
