cards r there but i'm not getting user data

--- a/client/templates/authenticated/browse.html
+++ b/client/templates/authenticated/browse.html
@@ -1,32 +1,50 @@
 <template name="browse">
-	<!-- {{> sidebar}} -->
+	<!-- {{> sidebar}}  https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css>
+	https://cdn.jsdelivr.net/npm/semantic-ui@2.2.13/dist/components/card.css
+	https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css
+
+	-->
+
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+
+
   <h1>Browse</h1>
-	<ul>
+
+  	<div class="card-columns">
+
 	  {{#each user in users}}
-	    <li class="{{user.username}}">
-	      <a href="/messages/@{{user.username}}">
-	        {{fullName user.profile.name}}
-	      </a>
-	      <ul>
-	      	<li>Location: {{displayInfo user.profile.location}}</li>
-	      	<li>Bio: {{displayInfo user.profile.bio}}</li>
-	      	<li>Beliefs: {{displayListInfo user.profile.beliefs}}</li>
-	      	<li>
-	      		Media:
-		      	{{#each item in getList user.profile.links}}
-			      	<a href="{{item}}">link </a>
-			    {{/each}}
-			 </li>
-	      	<li>
-	      		Recently Read:
-		      	{{#each item in getList user.profile.recent}}
-			      	<a href="{{item}}">link </a>
-			    {{/each}}
-			 </li>
-	      	<li>Badges: {{displayListInfo user.profile.badges}}</li>
-	      	<li>Testimonials: {{displayListInfo user.profile.testimonials}}</li>
-	      </ul>
-	    </li>
-	  {{/each}}
-	</ul>
+	    <div class="{{user.username}} card">
+	      <!--<img class="card-img-top" src="..." alt="Card image cap">	style="width: 20rem;"-->
+	      <div class="card-block">	
+	      	<h4 class="card-header">
+	        	{{fullName user.profile.name}}
+	      	</h4>
+	      </div>
+	      <ul class="list-group list-group-flush">
+	      	<li class="list-group-item">Media:
+				      	{{#each item in getList user.profile.links}}
+					      	<a href="{{item}}">link </a>
+					    {{/each}}</li>
+			<li class="list-group-item">
+			      		Recently Read:
+				      	{{#each item in getList user.profile.recent}}
+					      	<a href="{{item}}">link </a>
+					    {{/each}}
+			</li>
+	    
+
+    		<li class="list-group-item">Location: {{displayInfo user.profile.location}}</li>
+    		<li class="list-group-item">Bio: {{displayInfo user.profile.bio}}</li>
+    		<li class="list-group-item">Beliefs: {{displayListInfo user.profile.beliefs}}</li>
+    		<li class="list-group-item">Badges: {{displayListInfo user.profile.badges}}</li>
+    		<li class="list-group-item">Testimonials: {{displayListInfo user.profile.testimonials}}</li>
+  		  </ul>
+  		  <div class="card-block">
+    		<!--<a href="#" class="card-link">Skip</a>-->
+    		<a href="/messages/@{{user.username}}" class="card-link">Message</a>
+  		  </div>
+		</div>
+	{{/each}}
+	</div>
 </template>
