just added collapsable side bar

--- a/client/stylesheets/module/_channel.scss
+++ b/client/stylesheets/module/_channel.scss
@@ -22,7 +22,7 @@ body.is-channel .container {
 .sidebar {
   left: 0;
   width: 250px;
-  background: $blue; 
+  //background: $blue; 
   padding: 20px;
 
   h5 {
@@ -94,6 +94,7 @@ body.is-channel .container {
     color: aliceblue;
     font-family: 'Lato', serif;
     background: $purple;
+    
 //    background: -webkit-linear-gradient($grad1, $grad2, $purple, $grad4, $grad5); /* For Safari */
 //    background: -o-linear-gradient($grad1, $grad2, $purple, $grad4, $grad5); /* For Opera */
 //    background: -moz-linear-gradient($grad1, $grad2, $purple, $grad4, $grad5); /* For Firefox */
@@ -114,18 +115,6 @@ body.is-channel .container {
 }
 
 
-.column {
-    float: left;
-    width: 50%;
-}
-
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-    
-}
-
 .vids {
     float: left;
     width: 50%;
@@ -139,7 +128,8 @@ body.is-channel .container {
 
 .assistant,
 .conversation {
-  position: fixed;
+  padding-top: 5px;
+  padding-left: 20px;
   top: 52px;
   bottom: 0;
   height: 100%;
@@ -147,29 +137,13 @@ body.is-channel .container {
 }
 
 .assistant {
-  right: 0px;
-  width: 450px;
-  background: $blue; 
-  padding: 20px;
-
-  h5 {
-    font-size: 16px;
-    margin: 0;
-    color: aliceblue;
-  }
-  h3 {
-    color: aliceblue;
-  }
-
   .column h3 {
-    margin-left: 10px;  
+    margin-left: 20px;  
   }
-
 
   li {
     font-size: 12px;
-  }
-    
+  } 
 
   a {
     font: 14px;
@@ -187,9 +161,13 @@ body.is-channel .container {
 
 
 
+/* End Assistant, stop! */
+
+
+
 .conversation {
   left: 250px;
-  width: calc( 100% - 700px );
+  width: calc( 100% - 250px );
   background: #fff;
   border-top: 1px solid #eee;
 
