added profile info on sign-up for location, age, occupation, bio

--- a/client/templates/authenticated/browse.html
+++ b/client/templates/authenticated/browse.html
@@ -33,8 +33,9 @@
 					    {{/each}}
 			</li>
 	    
-
+	    	<li class="list-group-item">Age: {{displayInfo user.profile.age}}</li>
     		<li class="list-group-item">Location: {{displayInfo user.profile.location}}</li>
+    		<li class="list-group-item">Occupation: {{displayInfo user.profile.occupation}}</li>
     		<li class="list-group-item">Bio: {{displayInfo user.profile.bio}}</li>
     		<li class="list-group-item">Beliefs: {{displayListInfo user.profile.beliefs}}</li>
     		<li class="list-group-item">Badges: {{displayListInfo user.profile.badges}}</li>
