--- a/client/templates/public/signup.html
+++ b/client/templates/public/signup.html
@@ -1,8 +1,8 @@
 <template name="signup">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <h4 class="page-header">Sign Up</h4>
-      <form id="signup" class="signup">
+  <h4 class="page-header">Sign Up</h4>
+  <form id="signup" class="signup">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-4">
         <div class="row">
           <div class="col-xs-6">
             <div class="form-group">
@@ -32,11 +32,54 @@
           <label for="password">Password</label>
           <input type="password" name="password" class="form-control" placeholder="Password">
         </div>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <div class="row">
+          <div class="col-xs-10">
+            <div class="form-group">
+              <label for="location">Location</label>
+              <input type="text" name="location" class="form-control" placeholder="Location">
+            </div>
+          </div>
+        </div> 
+        <div class="row"> 
+          <div class="col-xs-4">
+            <div class="form-group">
+              <label for="age">Age</label>
+              <input type="number" name="age" class="form-control" placeholder="Age">
+            </div>
+          </div>        
+          <div class="col-xs-6">
+            <div class="form-group">
+              <label for="occupation">Occupation</label>
+              <input type="text" name="occupation" class="form-control" placeholder="Occupation">
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-xs-10">
+            <div class="form-group">
+              <label for="bio">Bio</label>
+              <textarea class="form-control" name="bio" cols="40" rows="5"
+              placeholder="Tell others a little about yourself."></textarea>
+            </div>
+          </div>
+        </div> 
+      </div> 
+    </div>
+
+    <div class="row">
+      <div class="col-xs-6">
         <div class="form-group">
           <input type="submit" class="btn btn-success" value="Sign Up">
         </div>
-      </form>
-      <p>Already have an account? <a href="{{pathFor 'login'}}">Log In</a>.</p>
+      </div>
     </div>
-  </div>
+
+  </form>     
+      <p>Already have an account? <a href="{{pathFor 'login'}}">Log In</a>.</p>
+    
+  
 </template>
