modified seed data

--- a/client/templates/public/signup.html
+++ b/client/templates/public/signup.html
@@ -71,6 +71,14 @@
     </div>
 
     <div class="row">
+      <div class="form-group">
+        <label for="bio">Bio</label>
+        <textarea class="form-control" name="bio" cols="40" rows="5"
+        placeholder="Tell others a little about yourself."></textarea>
+      </div>
+    </div>
+
+    <div class="row">
       <div class="col-xs-6">
         <div class="form-group">
           <input type="submit" class="btn btn-success" value="Sign Up">
