--- a/client/templates/authenticated/assistant.html
+++ b/client/templates/authenticated/assistant.html
@@ -6,9 +6,9 @@
 
 <!-- To apply other profiles, we would want to use variables here insted of hardcoded text -->
 
-<h5> 
-    Here is some help to get you started. Based on your profile, we suggest starting the conversation sharing your views on gun contorl.
-</h5>
+<h6> 
+    Here is some help to get you started. Based on your profile, we suggest starting the conversation sharing your views on gun contorl. More topics can be found <a href="https://www.procon.org/debate-topics.php" target="_blank"> here.</a>
+</h6>
     
     
 <div id="accordion" role="tablist" aria-multiselectable="true">
@@ -24,10 +24,10 @@
     <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne">
       <div class="card-block">
             <ul>
-                <li><a href="https://www.vice.com/en_us/article/gy5ex9/the-leftist-argument-against-gun-control">A left perspective</a></li>
-                <li><a href="https://eaglerising.com/48360/we-can-not-coexist-with-people-who-want-to-kill-us/">Guns used to defent against terrorist</a></li>
-                <li><a href="http://www.dw.com/en/8-facts-about-gun-control-in-the-us/a-40816418">Gun Control FAQ</a></li>
-                <li><a href="https://www.allsides.com/allsides-search-results?search_api_views_fulltext=gun%20control&created=3&submit_x=0&submit_y=0">Allsides.com articles from both sides</a></li>
+                <li><a href="https://www.vice.com/en_us/article/gy5ex9/the-leftist-argument-against-gun-control" target="_blank">A left perspective</a></li>
+                <li><a href="https://eaglerising.com/48360/we-can-not-coexist-with-people-who-want-to-kill-us/" target="_blank">Guns used to defent against terrorist</a></li>
+                <li><a href="http://www.dw.com/en/8-facts-about-gun-control-in-the-us/a-40816418" target="_blank">Gun Control FAQ</a></li>
+                <li><a href="https://www.allsides.com/allsides-search-results?search_api_views_fulltext=gun%20control&created=3&submit_x=0&submit_y=0" target="_blank">Allsides.com articles from both sides</a></li>
 
             </ul>
       </div>
@@ -44,11 +44,11 @@
     <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
       <div class="card-block">
          <ul>
-            <!-- from http://www.justfacts.com/guncontrol.asp -->
-            <li>Handguns comprised 52% of all new guns sold to U.S. civilians and law enforcement in 2014</li>
-            <li>U.S. civilians use guns to defend themselves and others from crime at least 989,883 times per year</li>
-            <li>Americans use guns to frighten away intruders who are breaking into their homes about 498,000 times per year</li>
-            <li>Roughly 14,249 murders were committed in the United States during 2014. Of these, about 9,675 or 68% were committed with firearms</li>
+            <!-- from  -->
+            <li>Handguns comprised 52% of all new guns sold to U.S. civilians and law enforcement in 2014</li> <a href="http://www.justfacts.com/guncontrol.asp" target="_blank">[1]</a>
+            <li>U.S. civilians use guns to defend themselves and others from crime at least 989,883 times per year</li> <a href="https://spsugunsafety.wordpress.com/gun-statistics/" target="_blank">[2]</a>
+            <li>Americans use guns to frighten away intruders who are breaking into their homes about 498,000 times per year</li> <a href="http://www.justfacts.com/guncontrol.asp" target="_blank">[3]</a>
+            <li>Roughly 14,249 murders were committed in the United States during 2014. Of these, about 9,675 or 68% were committed with firearms</li> <a href="http://www.justfacts.com/guncontrol.asp" target="_blank">[4]</a>
         </ul>  
       </div>
     </div>
@@ -63,9 +63,11 @@
     </div>
     <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
       <div class="card-block">
-         <ul>
-            <li>Q1</li>
-        </ul>  
+         <ol>
+            <li>Why do you favor your position? Do you think there is a reasonable compromise?</li>
+            <li>What controls, if any, do you think should be implemented?</li>
+            <li>What are your opinions on the growing number of shootings around the nation?</li>
+        </ol>  
       </div>
     </div>
   </div>
@@ -91,6 +93,22 @@
     </div>
 
 </div> 
+      </div>
+    </div>
+    </div>
+    <div class="card">
+    <div class="card-header" role="tab" id="headingFive">
+      <h5 class="mb-0">
+        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+          Belief Comparison
+        </a>
+      </h5>
+    </div>
+    <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive">
+      <div class="card-block">
+          
+            <img src="beliefs.png" alt="Belief Sample" height="100%" width="100%"/>
+          
       </div>
     </div>
     </div>
