--- a/client/templates/authenticated/channel.html
+++ b/client/templates/authenticated/channel.html
@@ -12,7 +12,7 @@
     
         <div class="w3-sidebar w3-bar-block w3-card w3-animate-right" style="display:none;right:0" id="mySidebar">
           <button class="w3-bar-item w3-button w3-large w3-right"
-          onclick="w3_close()">Close &times;</button>
+          onclick="w3_close()"> &times;</button>
             
 <!--            Adding Assistant to the right bar-->
               {{> assistant}}      
