added beliefs for profile

--- a/client/templates/authenticated/browse.html
+++ b/client/templates/authenticated/browse.html
@@ -26,7 +26,7 @@
     		<li class="list-group-item">Location: {{displayInfo user.profile.location}}</li>
     		<li class="list-group-item">Occupation: {{displayInfo user.profile.occupation}}</li>
     		<li class="list-group-item">Bio: {{displayInfo user.profile.bio}}</li>
-    		<li class="list-group-item">Beliefs: {{displayListInfo user.profile.beliefs}}</li>
+    		<li class="list-group-item">Beliefs: {{getBeliefs user.beliefs}}</li>
   		  </ul>
   		  <div class="card-block">
     		<!--<a href="#" class="card-link">Skip</a>-->
