--- a/client/stylesheets/module/_welcome.scss
+++ b/client/stylesheets/module/_welcome.scss
@@ -58,3 +58,16 @@ $grad5: #704FFB;
 .carousel {
     text-align: center;
 }
+
+.carousel-button {
+    border: none;
+    background-color: #fff;
+    color: black;
+    font-weight: bold;
+    font-size: 50px;
+    margin: 25px;
+}
+
+span {
+    font-size: 20px;
+}
