--- a/client/templates/globals/header.html
+++ b/client/templates/globals/header.html
@@ -2,10 +2,10 @@
 	<nav class="navbar navbar-default" role="navigation">
 	  <div class="container">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="/">
-          Converse
-          <span>Get to know people with a different point of view</span>
-        </a>
+	      <a class="navbar-brand" href="/" style="margin-top: -25px;">
+          	<img src="img/CONVERSE Logo Black.png" alt="Converse" height="75" width="150" style=""/>
+          </a>
+		  <div class="navbar-slogan" style="height:55px; width:500px; padding-top:17px; color: #aaa; margin-left: -15px; font-size:14px;">Get to know people with a different point of view</div>
 	    </div>
       {{#if currentUser}}
         {{> authenticatedNavigation}}
