--- a/client/templates/public/welcome.html
+++ b/client/templates/public/welcome.html
@@ -14,28 +14,20 @@
 
         <div class="carousel">
             <h1>ABOUT CONVERSE</h1>
-            <!-- <div class="tutorial" style="display:inline;">
-            <button id="left" class="carousel-button">&#10094;</button>
-            <div class="carousel" style="display:inline;">
-            <div class="slides" style="display:block">
-            <div class="caption" style="">Browse the profiles of other users with different opinions. You can choose to send them an invite or simply try to match with them. Once both parties accept, discuss!</div>
-            <img class="slide-img" src="img/carousel_browse.png" alt="Browse the profiles of other users" style="width:100vh;"/>
-            </div>
-            <div class="slides" style="display:none">
-            <div class="caption">While discussing, view a sidebar of helpful information and recommended topics, to really get the discussion going!</div>
-            <img class="slide-img" src="img/carousel_chat.png" alt="Get information about relevant statistics and topics" style="width:100vh;"/>
-            </div>
-            <div class="slides" style="display:none">
-            <div class="caption">When you're done talking, or if you've been having a really great conversation, rate it! Are they a great conversationalist? Let them know! Build reputation by having good conversation. The better your reputation, the more people will want to converse!</div>
-            <img class="slide-img" src="img/carousel_feedback.png" alt="Give feedback about your conversation" style="width:100vh;"/>
-            </div>
-            <div class="slides" style="display:none">
-            <div class="caption">Let's get Conversing!</div>
-            <img class="slide-img" src="img/CONVERSE Logo Black (Large).png" alt="CONVERSE Logo" style="width:100vh;"/>
-            </div>
-            <button id="right" class="carousel-button">&#10095;</button>
-            </div>
-            </div> -->
+            <span>Get to know people with a different point of view! Converse is an app designed to match people of opposing political viewpoints with the goal of engaging in a conversation. Converse aims to foster understanding and dialogue and encourages users to explore a world outside of their political bubble.</span>
+            <div>&nbsp;</div>
+            <h3>Create an Account</h3>
+            <img name='c-feedback' src="img/carousel_feedback.png" alt="feedback" style="max-width: 75%;"/>
+            <h5>Sign up for an account to connect with other users!</h5>
+            <div>&nbsp;</div>
+            <h3>Browse Users</h3>
+            <img name='c-browse' src="img/carousel_browse.png" alt="browse" style="max-width: 75%;"/>
+            <h5>Users are matched with you based on topics you disagree with. Scroll through a list of matches and choose one to talk to!</h5>
+            <div>&nbsp;</div>
+            <h3>Chat</h3>
+            <img name='c-chat' src="img/carousel_chat.png" alt="chat" style="max-width: 75%;"/>
+            <h5>Start a conversation! Our helpful Conversation Assistant is there to help you if you need inspiration.</h5>
+            <div>&nbsp;</div>
         </div>
     </div>
 </template>
