--- a/client/stylesheets/module/_header.scss
+++ b/client/stylesheets/module/_header.scss
@@ -5,9 +5,10 @@
 
     .navbar-brand > span {
         position: relative;
-        top: -1px;
-        left: 10px;
+        top: -5px;
+        left: 0px;
         font-size: 14px;
+        padding-bottom: 10px;
         color: #aaa;
     }
 }
