--- a/client/templates/globals/authenticated-navigation.html
+++ b/client/templates/globals/authenticated-navigation.html
@@ -1,9 +1,9 @@
 <template name="authenticatedNavigation">
-  <ul class="nav navbar-nav navbar-right">
+  <ul class="nav navbar-nav navbar-right" style="margin: 0px; padding-top: 5px;">
     <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{currentUser.emails.[0].address}} <span class="caret"></span></a>
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-size:14px;">{{currentUser.emails.[0].address}}</a>
       <ul class="dropdown-menu" role="menu">
-        <li class="logout"><a href="#">Logout</a></li>
+        <li class="logout" style="font-size: 12px;"><a href="#">Logout</a></li>
       </ul>
     </li>
   </ul>
